# uop_utils

./: .gitignore  README.md  pyproject.toml
src/uop_utils/: __init__.py  coare.py  geo.py  io.py  metadata.py  naming.py  plotting.py  qc.py
tests/: test_geo.py
