[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uop_utils"
version = "0.1.1"
description = "Shared utilities for UOP ocean, buoy, and waveglider processing workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Yu Gao and collaborators" }
]
dependencies = [
  "numpy",
  "xarray",
  "scipy",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
